fix dropdown menu on mobile screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,16 +90,24 @@ nav ul li a:hover {
 
 nav ul li ul {
     display: none;
-    position: absolute;
+    position: absolute; 
     left: 0;
     float: left;
     transition: all 0.5s ease;
-    margin-top: -30px;
+    margin-top: -25px;
+}
+
+@media screen and (max-width: 600px) {
+    nav ul li ul {
+        display: none;
+        position: absolute; 
+        left: -160%;
+    }
 }
 
 nav ul li:hover ul {
     display: block;
-    width: max-content;
+    width: 300px;
     text-align: left;
     padding-left: 30px;
     z-index: 1;
@@ -227,16 +235,6 @@ a.topbtn:hover {
     background-color: white;
     padding: 15px;
 }
-
-
-@media screen and (max-width: 800px) {
-    .blog-post-link {
-        float: none;
-        margin: 0px 0px 20px 0px;
-        width: 100%;
-        background-color: white;
-    }
-  }
 
 @media screen and (max-width: 600px) {
     .blog-post-link {
